WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216285
NetworkProcess: Check for invalid handle before writing salt file
https://bugs.webkit.org/show_bug.cgi?id=216285
Summary
NetworkProcess: Check for invalid handle before writing salt file
Lauro Moura
Reported
2020-09-08 14:50:08 PDT
NetworkProcess: Check for invalid handle before writing salt file
Attachments
Patch
(1.57 KB, patch)
2020-09-08 14:51 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-09-08 14:51:16 PDT
Created
attachment 408270
[details]
Patch
Sihui Liu
Comment 2
2020-09-08 15:34:28 PDT
Comment on
attachment 408270
[details]
Patch Thanks for fixing this!
EWS
Comment 3
2020-09-08 16:03:19 PDT
Committed
r266757
: <
https://trac.webkit.org/changeset/266757
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408270
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-09-08 16:04:23 PDT
<
rdar://problem/68535508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug