NetworkProcess: Check for invalid handle before writing salt file https://bugs.webkit.org/show_bug.cgi?id=216285

Reviewed by Sihui Liu.

Covered by existing tests.

Fixes crashes in GTK/WPE after r266742.

* NetworkProcess/cache/NetworkCacheData.cpp:
(WebKit::NetworkCache::readOrMakeSalt):


Canonical link: https://commits.webkit.org/229121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266757 268f45cc-cd09-0410-ab3c-d52691b4dbfc